<resources>
    <string name="app_name">NotePad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New note</string>
    <string name="title">Title…</string>
    <string name="note">Note text…</string>
    <string name="save">Save Note</string>
    <string name="insert_date">Insert date</string>
    <string name="clear">Clear text</string>
    <string name="change_notes_view">Change notes view</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="notelistfragment">.NoteListFragment</string>
    <string name="createnotefragment">.CreateNoteFragment</string>
    <string name="note_view">Note view</string>
    <string name="calendar">Calendar</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="no_title">no title</string>
    <string name="reminder">Remind\n\t\t\t\t\t\ton</string>
</resources>