<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/new_note"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/title"
            android:padding="10dp"
            android:textColorHint="#CAC5C5"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#EFE484"
            android:gravity="top"
            android:hint="@string/note"
            android:lines="18"
            android:padding="10dp"
            android:textColorHint="#CAC5C5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#8BC34A"
            android:text="@string/save"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#58A6E4"
            android:text="@string/insert_date"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#B6362C"
            android:text="@string/clear"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="center"
            app:hideOnScroll="true"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar"
            app:navigationIconTint="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#E46F4A"
            app:layout_anchor="@id/bottom_app_bar"
            app:srcCompat="@drawable/ic_back_fab"
            app:tint="@android:color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>

